--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   --color-marker: rgb(108, 99, 255);
   --color-white: #fff;
   --color-yellow: rgb(255, 217, 0);
+  --color-beige: rgb(149, 146, 141, 0.8);
 
   --transition: all 400ms ease;
 }
@@ -95,11 +96,16 @@ header {
   background-color: transparent;
 }
 .button {
-  background-color: var(--color-main);
+  background-color: var(--color-beige);
   border: 2px solid var(--color-secondary);
   border-radius: 1.2rem;
   color: var(--color-white);
   padding: 0.7rem;
+  width: 15rem;
+  height: 4rem;
+}
+.button:hover {
+  border: 2px solid var(--color-secondary);
 }
 /* personal photo */
 .info-icon {
@@ -156,8 +162,16 @@ header {
 .card-body h5 {
   text-align: justify;
 }
-/* ---------------------Resume--------------------------- */
+.buttons-about {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
+/* ---------------------Resume--------------------------- */
+.screen-container {
+  min-height: 69vh;
+}
 .resume-container {
   display: flex;
   align-items: center;
@@ -450,21 +464,139 @@ header {
 }
 
 /* --------------------Contact--------------------------- */
-.contactContainer {
-  display: grid;
-  place-items: center;
-  gap: 15px;
+
+.contact-container {
+  position: relative;
+  min-width: 110rem;
+  min-height: 55rem;
+  display: flex;
 }
-input,
-textarea {
-  width: 50vw;
-  padding: 10px;
-  text-indent: 10px;
+.contact-container .contactInfo {
+  position: absolute;
+  top: 4rem;
+  width: 35rem;
+  height: calc(100% - 8rem);
+  background-color: var(--color-secondary);
+  color: black;
+  z-index: 1;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 2rem 2.5rem rgb(0, 0, 0, 0.2);
+}
+
+.contact-container .contactForm {
+  position: absolute;
+  padding: 7rem 5rem;
+  padding-left: 25rem;
+  margin-left: 15rem;
+  width: calc(100% - 15rem);
+  height: 100%;
+  background-color: rgb(149, 146, 141, 0.8);
+  box-shadow: 0 5rem 5rem rgb(0, 0, 0, 0.3);
+}
+.formBox {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  /* padding-top: 1rem; */
+}
+.inputBox {
+  position: relative;
+  margin-bottom: 3.5rem;
+}
+.w50 {
+  width: 40%;
+}
+.w100 {
+  width: 100%;
+}
+.contactForm h1 {
+  margin-bottom: 4rem;
+  color: var(--color-white);
+}
+.inputBox input,
+.inputBox textarea {
+  width: 100%;
+  resize: none;
+  padding: 0.5rem 0;
+}
+.inputBox textarea {
+  height: 12rem;
+}
+.inputBox span {
+  position: absolute;
+  left: 0;
+  padding: 0.5rem 1rem;
+  pointer-events: none;
+  transition: 0.3s;
+  color: black;
+}
+.inputBox input,
+.inputBox textarea {
   border: 2px solid var(--color-secondary);
   border-radius: 0.5rem;
 }
-.contactForm h1 {
-  margin-bottom: 3rem;
+.inputBox input:focus ~ span,
+.inputBox input:valid ~ span,
+.inputBox textarea:focus ~ span,
+.inputBox textarea:valid ~ span {
+  transform: translateY(-3rem);
+  font-size: var(--font-p);
+  color: var(--color-white);
+}
+
+button.submit-button {
+  position: relative;
+  cursor: pointer;
+  background: transparent;
+  border: 2px solid var(--color-secondary);
+  border-radius: 0.5rem;
+  width: 20rem;
+  height: 5rem;
+  color: var(--color-white);
+  text-align: center;
+}
+button.submit-button:hover {
+  background: white;
+  color: black;
+}
+.success-submit-message {
+  display: grid;
+  place-items: center;
+  margin-bottom: 20rem;
+  background-color: var(--color-secondary);
+  height: 8rem;
+  color: black;
+}
+
+/* Responsivity */
+@media screen and (max-width: 1400px) {
+  .contact-container {
+    width: 100%;
+    min-width: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .contact-container .contactInfo {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: auto;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .contact-container .contactForm {
+    position: relative;
+    width: calc(100% - 35rem);
+    padding: 4rem;
+    padding-left: 4rem;
+    margin-left: 0;
+    width: 100%;
+    height: auto;
+    box-shadow: none;
+  }
 }
 
 /* -------------------Footer------------------------- */
